<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>

    <string name="first_app">Spotify Streamer</string>
    <string name="second_app">Super Duo</string>
    <string name="third_app">Build It Bigger</string>
    <string name="fourth_app">XYZ Reader</string>
    <string name="fifth_app">Capestone</string>
    <string name="apps_text">My NanoDegree Apps</string>

</resources>
